--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,6 +58,12 @@
       }
 
       .btn {
+        .sign-up(100px, 10px);
+        &:hover{
+          background: white;
+          color:  #23293B;
+          border: 1px solid  #23293B;
+        }
       }
     }
 
