--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,30 @@
 // Navigation code here
+
+header{
+    .flex(column);
+    align-items: center;
+    .top{
+        width: 100%;
+        background: @wild-sand;
+        .flex(column);
+        align-items: center;
+        h1{
+            font-size: 4rem;
+            margin: 20px;
+        }
+        nav{
+            width: 60%;
+            .flex(row);
+            justify-content: space-around;
+            margin: 10px;
+            a{
+                font-size: 2rem;
+                text-decoration: none;
+                color:  @ebony-clay;
+            }
+        }
+    }
+    img{
+        border-radius: 10px;
+    }
+}
