--- a/css/index.css
+++ b/css/index.css
@@ -183,10 +183,20 @@ header .top nav {
   justify-content: space-around;
   margin: 10px;
 }
+@media (max-width: 500px) {
+  header .top nav {
+    width: 90%;
+  }
+}
 header .top nav a {
   font-size: 2rem;
   text-decoration: none;
   color: #23293B;
+}
+@media (max-width: 500px) {
+  header .top nav a {
+    font-size: 1.4rem;
+  }
 }
 header img {
   border-radius: 10px;
@@ -212,11 +222,34 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    display: flex;
+    flex-direction: column;
+    width: 96;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 95%;
+    height: auto;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -234,8 +267,20 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 96%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -252,6 +297,17 @@ footer {
   text-align: center;
   font-size: 2rem;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    background: #23293B;
+    color: white;
+    padding: 15px;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 2rem;
+  }
+}
 .home .walk .walk-text .btn:hover {
   background: white;
   color: #23293B;
@@ -260,6 +316,13 @@ footer {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 96%;
+    margin: 10px 0;
+    order: -1;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
