--- a/less/home-page.less
+++ b/less/home-page.less
@@ -18,12 +18,30 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-
+    @media @phone{
+      .flex(column);
+      width: 96;
+    }
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width: 95%;
+        height: auto;
+        
+      }
+    }
+    .sky{
+      @media @phone{
+        display: none;
+      }
+    }
+    .launch{
+      @media @phone{
+        display: none;
+      }
     }
   }
 
@@ -45,10 +63,15 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-
+    @media @phone{
+      .flex(column);
+      padding: 15px;
+    }
     .walk-text {
       width: 50%;
-
+      @media @phone{
+        width: 96%;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -59,6 +82,9 @@
 
       .btn {
         .sign-up(100px, 10px);
+        @media @phone{
+          .sign-up(100%, 15px)
+        }
         &:hover{
           background: white;
           color:  #23293B;
@@ -68,9 +94,14 @@
     }
 
     .walk-img {
+      
       width: 46%;
       margin-left: 4%;
-      
+      @media @phone{
+        width: 96%;
+        margin: 10px 0;
+        order: -1;
+      }
       img {
         width: 100%;
         height: auto;
