--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,10 +17,16 @@ header{
             .flex(row);
             justify-content: space-around;
             margin: 10px;
+            @media @phone{
+                width: 90%;
+            }
             a{
                 font-size: 2rem;
                 text-decoration: none;
                 color:  @ebony-clay;
+                @media @phone{
+                    font-size: 1.4rem;
+                }
             }
         }
     }
