--- a/css/index.css
+++ b/css/index.css
@@ -171,13 +171,19 @@ header .top {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+}
+@media (max-width: 500px) {
+  header .top {
+    position: relative;
+  }
 }
 header .top h1 {
   font-size: 4rem;
   margin: 20px;
 }
 header .top nav {
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -200,6 +206,12 @@ header .top nav a {
 }
 header img {
   border-radius: 10px;
+  margin-top: 130px;
+}
+@media (max-width: 500px) {
+  header img {
+    margin-top: 0;
+  }
 }
 footer {
   color: #22283B;
