--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,12 +8,17 @@ header{
         background: @wild-sand;
         .flex(column);
         align-items: center;
+        position: fixed;
+        
+        @media @phone{
+            position: relative;
+        }
         h1{
             font-size: 4rem;
             margin: 20px;
         }
         nav{
-            width: 60%;
+            width: 70%;
             .flex(row);
             justify-content: space-around;
             margin: 10px;
@@ -32,5 +37,9 @@ header{
     }
     img{
         border-radius: 10px;
+        margin-top: 130px;
+        @media @phone{
+            margin-top: 0;
+        }
     }
 }
