added color opacity to the fixed nav on desktop view

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,12 +5,13 @@ header{
     align-items: center;
     .top{
         width: 100%;
-        background: @wild-sand;
+        background: @wild-sand-opaque;
         .flex(column);
         align-items: center;
         position: fixed;
         
         @media @phone{
+            background: @wild-sand;
             position: relative;
         }
         h1{
