--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,7 @@ header {
 }
 header .top {
   width: 100%;
-  background: #F6F6F6;
+  background: rgba(246, 246, 246, 0.96);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -175,6 +175,7 @@ header .top {
 }
 @media (max-width: 500px) {
   header .top {
+    background: #F6F6F6;
     position: relative;
   }
 }
