--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@ header{
             margin: 20px;
         }
         nav{
-            width: 70%;
+            width: 500px;
             .flex(row);
             justify-content: space-around;
             margin: 10px;
